2004-04-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.2.0

	* scripts/convert-ly.py (conv): add 2.2.0 rule.

2004-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/cluster.cc (height): Fix warning.

	* lily/parser.yy: Janitorial cleanups.

	* Documentation/user/tutorial.itely (Tutorial): Typo.

2004-04-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/change-iterator.cc (process): search at multiple context
	levels. This fixes 

	
	* scm/part-combiner.scm (analyse-spanner-states): use split-index,
	not voice-state index for tie state. This fixes a partcombine
	problem with ties.

	* Documentation/user/tutorial.itely (Commenting input files): add
	note about convert-ly.

	* input/test/cadenza-skip.ly:  new file.

2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/nl.po: Spelling fixes.

	* autogen.sh (srcdir): Regenerate.

	* stepmake/autogen.sh (srcdir): Copy SUSE fix to the master
	autogen.sh.

	* configure.in: Use C++ to check for C++ header.

	* po/nl.po: Update.

	* lily/scm-option.cc (LY_DEFINE): Name of the program is lilypond-bin.

	* lily/event.cc (to_relative_octave): Translatable sentence should
	be one string.

	* python/lilylib.py (warranty): Year range is not translatable.
	It's 2004 already!

	* flower/warn.cc (non_fatal_error, warning, programming_error):
	Remove whitespace from translated string.

2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* VERSION: release 2.1.37.

2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* configure.in: check for C language.

	* lily/source-file.cc: include strstream without h.

	* scm/documentation-generate.scm (string-append): use name without
	.texi.

	* autogen.sh (srcdir): SUSE fix.

	* Documentation/user/notation.itely (Ancient clefs): idem.

	* Documentation/user/lilypond-book.itely (Integrating HTML and
	music): idem.

	* Documentation/user/cheatsheet.itely (Cheat sheet): octave fixes.

	* lily/change-iterator.cc (process): use find_existing_context().
